jenkins_k8s/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts-jdk11
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
        - name: docker-sock
          mountPath: /var/run/docker.sock
        - name: docker
          mountPath: /usr/bin/docker
      volumes:
      - name: jenkins-home
        emptyDir: { }
      - name: docker-sock
        hostPath:
         path: /var/run/docker.sock
      - name: docker
        hostPath:
         path: /usr/bin/docker
